--- a/src/application/Group.fxml
+++ b/src/application/Group.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -18,10 +19,11 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button layoutX="7.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="193.0" text="Фильтрация по числу студентов" />
-            <Button layoutX="7.0" layoutY="97.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="193.0" text="Фильтрация по имени старосты" />
-            <TextField layoutX="203.0" layoutY="50.0" prefHeight="25.0" prefWidth="57.0" promptText="Число" />
-            <TextField layoutX="206.0" layoutY="97.0" prefHeight="25.0" prefWidth="57.0" promptText="Имя" />
+            <Button fx:id="bSortStatus" layoutX="7.0" layoutY="50.0" mnemonicParsing="false" onAction="#SortByStud" prefHeight="25.0" prefWidth="193.0" text="По числу студентов" />
+            <Button fx:id="bSortNum" layoutX="7.0" layoutY="97.0" mnemonicParsing="false" onAction="#SortByFac" prefHeight="25.0" prefWidth="193.0" text="По номеру факультета" />
+            <TextField fx:id="tfSortStatus" layoutX="203.0" layoutY="50.0" prefHeight="25.0" prefWidth="57.0" promptText="Число" />
+            <TextField fx:id="tfSortNum" layoutX="206.0" layoutY="97.0" prefHeight="25.0" prefWidth="57.0" promptText="Имя" />
+            <Button layoutX="206.0" layoutY="14.0" mnemonicParsing="false" onAction="#pass" text="Сброс!" />
          </children>
       </Pane>
       <Label layoutX="515.0" layoutY="58.0" prefHeight="72.0" prefWidth="171.0" text="Данные групп" textAlignment="CENTER">
@@ -62,7 +64,6 @@
          </columnResizePolicy>
       </TableView>
       <TextField fx:id="tfidGroup" editable="false" layoutX="167.0" layoutY="334.0" AnchorPane.topAnchor="335.0" />
-      <TextField fx:id="tfFaculty_idFaculty" layoutX="167.0" layoutY="488.0" AnchorPane.topAnchor="495.0" />
       <TextField fx:id="tfNumber_of_group_members" editable="false" layoutX="167.0" layoutY="451.0" AnchorPane.topAnchor="455.0" />
       <TextField fx:id="tfName_of_head_of_group" layoutX="167.0" layoutY="408.0" AnchorPane.topAnchor="415.0" />
       <TextField fx:id="tfNumber_of_group" layoutX="167.0" layoutY="373.0" AnchorPane.topAnchor="375.0" />
@@ -93,5 +94,7 @@
       </Label>
       <Label layoutX="14.0" layoutY="14.0" text="ID:" />
       <Label fx:id="lNum" layoutX="37.0" layoutY="14.0" text="#" />
+      <Button fx:id="bOtch" layoutX="1029.0" layoutY="112.0" mnemonicParsing="false" onAction="#winOtchka" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Отчет по группе" textFill="WHITE" />
+      <ComboBox fx:id="cbSID" layoutX="167.0" layoutY="495.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
