--- a/src/application/kalculator.fxml
+++ b/src/application/kalculator.fxml
@@ -1,57 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" scaleShape="false" style="-fx-background-color: #A2B86F;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" scaleShape="false" style="-fx-background-color: #A2B86F;" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.calculator">
    <children>
-      <Pane layoutX="100.0" layoutY="102.0" prefHeight="408.0" prefWidth="603.0" style="-fx-border-color: black;">
+      <Pane layoutX="62.0" layoutY="31.0" prefHeight="488.0" prefWidth="678.0" style="-fx-border-color: black;">
          <children>
-            <Pane layoutX="14.0" layoutY="306.0" prefHeight="80.0" prefWidth="571.0" style="-fx-border-color: black;">
-               <children>
-                  <TextField layoutX="90.0" layoutY="25.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите кол-во студентов" />
-                  <TextField layoutX="325.0" layoutY="25.0" prefHeight="45.0" prefWidth="140.0" />
-                  <Label layoutX="23.0" layoutY="4.0" prefHeight="21.0" prefWidth="526.0" text="Вычисление расходов на стипендии для N студентов с научной стипендией">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <Pane layoutX="14.0" layoutY="219.0" prefHeight="80.0" prefWidth="571.0" style="-fx-border-color: black;">
-               <children>
-                  <TextField layoutX="90.0" layoutY="25.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите кол-во студентов" />
-                  <TextField layoutX="325.0" layoutY="25.0" prefHeight="45.0" prefWidth="140.0" />
-                  <Label layoutX="38.0" layoutY="4.0" prefHeight="21.0" prefWidth="496.0" text="Вычисление расходов на стипендии для N студентов с соц. стипендией">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <Pane layoutX="15.0" layoutY="133.0" prefHeight="80.0" prefWidth="571.0" style="-fx-border-color: black;">
-               <children>
-                  <TextField layoutX="90.0" layoutY="25.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите среднюю оценку" />
-                  <TextField layoutX="325.0" layoutY="25.0" prefHeight="45.0" prefWidth="140.0" />
-                  <Label layoutX="72.0" layoutY="4.0" prefHeight="21.0" prefWidth="428.0" text="Вычисление размера стипендии по средней оценке студента">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <Label alignment="CENTER" layoutX="209.0" layoutY="14.0" prefHeight="45.0" prefWidth="185.0" text="Калькулятор" textAlignment="CENTER">
+            <Label alignment="CENTER" layoutX="247.0" layoutY="14.0" prefHeight="45.0" prefWidth="185.0" text="Калькулятор" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="27.0" />
                </font>
             </Label>
+            <Label layoutX="57.0" layoutY="96.0" text="Есть ли долги?">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="57.0" layoutY="148.0" text="Как обучаешься?">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="57.0" layoutY="197.0" text="Единовременные выплаты:">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="57.0" layoutY="252.0" text="Дата заполнения">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="57.0" layoutY="308.0" text="Расчет сроком на">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="cbDolg" layoutX="340.0" layoutY="96.0" prefWidth="150.0" />
+            <ComboBox fx:id="cbObuch" layoutX="340.0" layoutY="148.0" prefWidth="150.0" />
+            <TextField fx:id="tfMoney" layoutX="341.0" layoutY="197.0" />
+            <TextField fx:id="tfDate" editable="false" layoutX="341.0" layoutY="252.0" />
+            <TextField fx:id="tfPeriod" layoutX="341.0" layoutY="308.0" prefHeight="25.0" prefWidth="62.0" promptText="1" />
+            <CheckBox fx:id="check" layoutX="530.0" layoutY="152.0" mnemonicParsing="false" onAction="#comboCheck" text="Получаю ГСС" />
+            <Label layoutX="415.0" layoutY="305.0" text="мес вперед (не больше 10)">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="cbGSS" layoutX="504.0" layoutY="178.0" prefHeight="25.0" prefWidth="147.0" promptText="Остался 1 мес" />
+            <Pane layoutX="37.0" layoutY="348.0" prefHeight="95.0" prefWidth="267.0" style="-fx-border-color: black; -fx-background-color: lightblue;">
+               <children>
+                  <Label layoutX="30.0" layoutY="14.0" text="Гарантированно получишь:">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lTotal" layoutX="30.0" layoutY="44.0" text="#">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane layoutX="332.0" layoutY="348.0" prefHeight="95.0" prefWidth="338.0" style="-fx-border-color: black; -fx-background-color: F2E0CA;">
+               <children>
+                  <Label layoutX="12.0" layoutY="27.0" text="При закрытии сессии на 5:">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="12.0" layoutY="48.0" text="При закрытии сессии на 4 и 5:">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="12.0" layoutY="71.0" text="При закрытии сессии на 4:">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="12.0" layoutY="4.0" text="Возможно получишь:">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="l5" layoutX="228.0" layoutY="27.0" text="#">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="l4and5" layoutX="228.0" layoutY="48.0" text="#">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="l4" layoutX="228.0" layoutY="71.0" text="#">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
          </children>
       </Pane>
-      <Button layoutX="300.0" layoutY="519.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="201.0" style="-fx-background-color: #25213E;" text="Запустить калькулятор" textFill="#fcfcfc">
+      <Button layoutX="300.0" layoutY="527.0" mnemonicParsing="false" onAction="#calculated" prefHeight="51.0" prefWidth="201.0" style="-fx-background-color: #25213E;" text="Запустить калькулятор" textFill="#fcfcfc">
          <font>
             <Font size="17.0" />
          </font>
