--- a/src/application/Group.fxml
+++ b/src/application/Group.fxml
@@ -82,7 +82,7 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <Label layoutX="44.0" layoutY="375.0" text="Номер группы">
+      <Label layoutX="44.0" layoutY="375.0" text="Имя группы">
          <font>
             <Font size="16.0" />
          </font>
