--- a/src/application/CreateInvite.fxml
+++ b/src/application/CreateInvite.fxml
@@ -20,9 +20,9 @@
       <TableView fx:id="tvOrganization" layoutX="466.0" layoutY="209.0" prefHeight="357.0" prefWidth="266.0">
          <columns>
             <TableColumn fx:id="tcidOrganization" prefWidth="75.0" text="ID" />
-            <TableColumn fx:id="tcName_of_organization" prefWidth="263.0" text="Name_of_organization" />
-            <TableColumn fx:id="tcName_of_head_of_organization" prefWidth="75.0" text="Head" />
-            <TableColumn fx:id="tcOrganization_direction" prefWidth="75.0" text="Location" />
+            <TableColumn fx:id="tcName_of_organization" prefWidth="263.0" text="Название организации" />
+            <TableColumn fx:id="tcName_of_head_of_organization" prefWidth="75.0" text="Лидер" />
+            <TableColumn fx:id="tcOrganization_direction" prefWidth="75.0" text="Расположение" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
