--- a/src/application/Organization.fxml
+++ b/src/application/Organization.fxml
@@ -25,10 +25,10 @@
       </Label>
       <TableView fx:id="tvOrganization" layoutX="487.0" layoutY="173.0" prefHeight="454.0" prefWidth="540.0">
          <columns>
-            <TableColumn fx:id="tcidOrganization" prefWidth="100.0" text="idOrganizatiom" />
-            <TableColumn fx:id="tcName_of_organization" prefWidth="154.0" text="Name_of_organization" />
-            <TableColumn fx:id="tcName_of_head_of_organization" prefWidth="196.0" text="Name_of_head_of_organization" />
-            <TableColumn fx:id="tcOrganization_direction" prefWidth="144.0" text="Organization_direction" />
+            <TableColumn fx:id="tcidOrganization" prefWidth="100.0" text="ID" />
+            <TableColumn fx:id="tcName_of_organization" prefWidth="154.0" text="Название" />
+            <TableColumn fx:id="tcName_of_head_of_organization" prefWidth="196.0" text="Лидер" />
+            <TableColumn fx:id="tcOrganization_direction" prefWidth="144.0" text="Расположение" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
